# Manta

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  MODULE.bazel  Makefile  README.md  WORKSPACE  conanfile.py  main.cpp  tools.bzl
.github/workflows/: bazel-single-platform.yml  cmake-single-platform.yml
UnitTest/: UT_CppCodegen.cpp  UT_FirstFollow.cpp  UT_HigherTypeSystem.cpp  UT_Lexer.cpp  UT_Parser.cpp  UT_ParserCodegen.cpp  UT_Precedence.cpp  UT_SelfParse.cpp  UT_TypeSystem.cpp  UT_Utility.cpp
applications/: BUILD  CMakeLists.txt  CminusParserDriver.cpp  CodegenDriver.cpp  DescriptionParserDriver.cpp  GeneratedParserDriver.cpp  ParserCodegenDriver.cpp  ProgramaticParserDriver.cpp  ProgrammaticParserDriver.cpp  TestParserCodegen.cpp  TestParsers.cpp  main.cpp  manta_binary.bzl
config/: code-ex.txt  code_rules.txt  config_rules.txt  full_rules.txt  full_rules_codegen.txt  lalr_grammar.txt  lexer_rules.txt  op_prec.txt  simple-rules.txt
examples/: basic_lexer.txt  basic_parser_and_lexer.txt  code-ex.txt  codefile.txt  example_config.txt
examples/C-/: C- code.cmm  C- grammar.txt
include/: DeterministicFiniteAutomata.hpp  Display.hpp  Exceptions.h  IStreamContainer.hpp  LALRParser.hpp  LexerDFA.hpp  LexerGenerator.h  LexerUtility.hpp  ParseNode.h  ParserGenerator.h  ParserUtility.hpp  utility.hpp
include/manta/: export.h
manta/: BUILD
manta/codegen/: Module.h
manta/generatedparsers/: BUILD  CminusParser.h  GeneratedDescriptionParser.cpp  GeneratedDescriptionParser.h  ParserRepresentation.h
manta/generator/: DescriptionParser.cpp  DescriptionParser.h  LALRPropagationGraph.h  LexerGenerator.cpp  LexerGenerator.h  ParserCodegen.cpp  ParserCodegen.h  ParserDriver.h  ParserGenerator.cpp  ParserGenerator.h
manta/lexer/: BUILD  DeterministicFiniteAutomata.cpp  DeterministicFiniteAutomata.h  LexerDFA.cpp  LexerDFA.h
manta/parser/: LALRParser.cpp  LALRParser.h  ParseNode.cpp  ParseNode.h  ParserData.cpp  ParserUtility.cpp
manta/utility/: BUILD  Exceptions.cpp  Exceptions.h  IStreamContainer.h  LexerUtility.h  ParserUtility.h  StreamFunctions.cpp  StreamFunctions.h  Timer.h  Utility.h  WorkDeque.h
manta/visualization/: Display.cpp  Display.h
source/: DeterministicFiniteAutomata.cpp  Display.cpp  LALRParser.cpp  LexerDFA.cpp  LexerGenerator.cpp  ParseNode.cpp  ParserGenerator.cpp  ParserUtility.cpp
src/: LALR-Manta.cpp  LALR-Manta.hpp  LALRParser.cpp  LALRParser.hpp  LexerDFA.cpp  LexerDFA.hpp  LexerGenerator.cpp  LexerGenerator.h  ParseNode.cpp  ParseNode.h  ParserGenerator.cpp  ParserGenerator.h  code-ex.txt  compile.cpp  compiler-compiler.cpp  compiler-compiler.hpp  cparse.cpp  cparse.hpp  dfa.cpp  dfa.hpp  dynamic_object.cpp  dynamic_object.hpp  istream_container.hpp  lexer-Manta.cpp  lexer-Manta.hpp  lexer-description.txt  lexer-dfa.cpp  lexer-dfa.hpp  lexer.cpp  lexer.hpp  lexing-rules.txt  main.cpp  manta-set.hpp  other rules.txt  parser-classes.cpp  parser-classes.hpp  parser-manta.hpp  simple-rules.txt  test-program.txt  utility.hpp
test/: BUILD  UT_AdvancedParser.cpp  UT_CppCodegen.cpp  UT_FirstFollow.cpp  UT_HigherTypeSystem.cpp  UT_Lexer.cpp  UT_Parser.cpp  UT_ParserCodegen.cpp  UT_Precedence.cpp  UT_ProductionRulesBuilder.cpp  UT_SelfParse.cpp  UT_Utility.cpp  test.bzl
(+72 files in other folders)
